Fix table colors and contrast in Tools and rulebook

--- a/css/styles.css
+++ b/css/styles.css
@@ -235,9 +235,6 @@ a:not(.nav-item) {
   .nav-item {
     width: 20rem;
   }
-  .navbar:not(.footer) > .navbar-nav > .nav-item:not(.footer-text) {
-    width: 20rem;
-  }
   .nav-link:not(.footer-text) {
     width: 20rem;
   }
